Move to 3.38.0 repo tree

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="app"></div>
   <script src="https://cdn.jsdelivr.net/npm/docute@3/dist/docute.js"></script>
   <script>
-    docute.init({ repo: "telegraf/telegraf" })
+    docute.init({ repo: "telegraf/telegraf/tree/3.38.0" })
   </script>
 </body>
 </html>
